# Data-Security

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Program.cpp  README.md  key.cpp  key.h  makefile  modifiers.cpp  modifiers.h
Binary/: CMakeLists.txt  Program.cpp  README.md
Encrypter/: CMakeLists.txt  Program.cpp  README.md
Generator/: CMakeLists.txt  Program.cpp  README.md
Obfuscator/: CMakeLists.txt  Program.cpp  README.md  key.cpp  key.h  modifiers.cpp  modifiers.h
Others/: .toBin.cpp.un~  XORenc.cpp  toBin.cpp
